# simple-address-formatter-rs

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs
src/: address.rs  error.rs  lib.rs
test/: countries.yaml
tests/: address_tests.rs
