[package]
name = "simple-address-formatter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
mustache = "0.9"
# TODO: With serde yaml being deprecated, what's the best library? Using serde-yaml for now.
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7.4"
once_cell = "1.21.3"


[build-dependencies]
mustache = "0.9"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7.4"
